syntax = "proto3";

message HttpRequest {
  bool online = 1;
  uint32 pos = 2;
  string tree_uuid = 3;
  string service_uuid = 4;
  map<string, bool> children = 5;
  string db_name = 6;
  string table_name = 7;
  bool method1 = 8;
  bool method2 = 9;
  string query = 10; // 若query有多个值，则使用","分隔开。
  map<string, string> data = 11;
}

message HttpResponse {
  bool success = 1;
}

service CommonInfo {
  rpc sendToDataCenter (HttpRequest) returns (HttpResponse);
}

// java: mvn compile